Fix summary page heading
The heading value was attempting to use a forms name
attribute, as no form is present this breaks the page
when rendering is attempted.

--- a/spec/javascripts/fixtures/DescendentElements.html
+++ b/spec/javascripts/fixtures/DescendentElements.html
@@ -13,11 +13,11 @@
                        id="risk_cleared" value="cleared">Clear</label>
             <label class="block-label inline" for="risk_yes">
                 <input type="radio" name="risk" id="risk_yes"
-                       value="yes">Yes
+                       value="true">Yes
             </label>
             <label class="block-label inline" for="risk_no">
                 <input type="radio" name="risk" id="risk_no"
-                       value="no" checked="checked">No</label>
+                       value="false" checked="checked">No</label>
             <div class="optional-section"><label for="risk_details">Please
                 give details</label>
                 <textarea id="risk_details"></textarea></div>
