Apply multiples plugin to medications
Introduces the multiples plugin to medication along with
corresponding changes to:

- Accommodate '_destroy' being a suffix to the ID, rather than value
- Manage JS issues encountered in IE7, 8 and 9 (resulting from use of
  'class' keyword within the jQuery
- Address styling issues with IE

--- a/spec/javascripts/fixtures/Multiples.html
+++ b/spec/javascripts/fixtures/Multiples.html
@@ -16,8 +16,8 @@
             <label for="administration-1">Administration</label>
             <input type="text" id="administration-1">
         </div>
-        <input type="checkbox" value="_destroy" id="destroy-1">
-        <label for="destroy-1">Remove</label>
+        <input type="checkbox" value="_destroy" id="attributes_1_destroy">
+        <label for="attributes_1_destroy">Remove</label>
     </div>
     <div class="item shown">
         <div>
@@ -28,8 +28,8 @@
             <label for="administration-2">Administration</label>
             <input type="text" id="administration-2">
         </div>
-        <input type="checkbox" value="_destroy" id="destroy-2">
-        <label for="destroy-2">Remove</label>
+        <input type="checkbox" value="_destroy" id="attributes_2_destroy">
+        <label for="attributes_2_destroy">Remove</label>
     </div>
     <div class="item shown">
         <div>
@@ -40,8 +40,8 @@
             <label for="administration-3">Administration</label>
             <input type="text" id="administration-3">
         </div>
-        <input type="checkbox" value="_destroy" id="destroy-3">
-        <label for="destroy-3">Remove</label>
+        <input type="checkbox" value="_destroy" id="attributes_3_destroy">
+        <label for="attributes_3_destroy">Remove</label>
     </div>
     <div class="item shown">
         <div>
@@ -52,8 +52,8 @@
             <label for="administration-4">Administration</label>
             <input type="text" id="administration-4">
         </div>
-        <input type="checkbox" value="_destroy" id="destroy-4">
-        <label for="destroy-4">Remove</label>
+        <input type="checkbox" value="_destroy" id="attributes_4_destroy">
+        <label for="attributes_4_destroy">Remove</label>
     </div>
     <div class="item">
         <div>
@@ -64,8 +64,8 @@
             <label for="administration-5">Administration</label>
             <input type="text" id="administration-5">
         </div>
-        <input type="checkbox" value="_destroy" id="destroy-5">
-        <label for="destroy-5">Remove</label>
+        <input type="checkbox" value="_destroy" id="attributes_5_destroy">
+        <label for="attributes_5_destroy">Remove</label>
     </div>
     <div class="item">
         <div>
@@ -76,8 +76,8 @@
             <label for="administration-6">Administration</label>
             <input type="text" id="administration-6">
         </div>
-        <input type="checkbox" value="_destroy" id="destroy-6">
-        <label for="destroy-6">Remove</label>
+        <input type="checkbox" value="_destroy" id="attributes_6_destroy">
+        <label for="attributes_6_destroy">Remove</label>
     </div>
 </div>
 
