Introduce revealables jQuery plugin
This is the first of a number of jQuery plugins that will replace
existing JavaScript so that user interactions are more composable.

--- a/spec/javascripts/fixtures/revealables.html
+++ b/spec/javascripts/fixtures/revealables.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Multiples fixture</title>
+    <title>Test fixture</title>
 </head>
 <body>
 
-<div class="multiples-container">
+<div class="multiples-container revealables">
     <div class="item shown">
         <div>
             <label for="description-1">Description</label>
@@ -16,7 +16,7 @@
             <label for="administration-1">Administration</label>
             <input type="text" id="administration-1">
         </div>
-        <input type="checkbox" value="_destroy" id="attributes_1_destroy">
+        <input type="checkbox" value="_destroy" class="destroy" id="attributes_1_destroy">
         <label for="attributes_1_destroy">Remove</label>
     </div>
     <div class="item shown">
@@ -28,7 +28,7 @@
             <label for="administration-2">Administration</label>
             <input type="text" id="administration-2">
         </div>
-        <input type="checkbox" value="_destroy" id="attributes_2_destroy">
+        <input type="checkbox" value="_destroy" class="destroy" id="attributes_2_destroy">
         <label for="attributes_2_destroy">Remove</label>
     </div>
     <div class="item shown">
@@ -40,7 +40,7 @@
             <label for="administration-3">Administration</label>
             <input type="text" id="administration-3">
         </div>
-        <input type="checkbox" value="_destroy" id="attributes_3_destroy">
+        <input type="checkbox" value="_destroy" class="destroy" id="attributes_3_destroy">
         <label for="attributes_3_destroy">Remove</label>
     </div>
     <div class="item shown">
@@ -52,7 +52,7 @@
             <label for="administration-4">Administration</label>
             <input type="text" id="administration-4">
         </div>
-        <input type="checkbox" value="_destroy" id="attributes_4_destroy">
+        <input type="checkbox" value="_destroy" class="destroy" id="attributes_4_destroy">
         <label for="attributes_4_destroy">Remove</label>
     </div>
     <div class="item">
@@ -64,7 +64,7 @@
             <label for="administration-5">Administration</label>
             <input type="text" id="administration-5">
         </div>
-        <input type="checkbox" value="_destroy" id="attributes_5_destroy">
+        <input type="checkbox" value="_destroy" class="destroy" id="attributes_5_destroy">
         <label for="attributes_5_destroy">Remove</label>
     </div>
     <div class="item">
@@ -76,7 +76,7 @@
             <label for="administration-6">Administration</label>
             <input type="text" id="administration-6">
         </div>
-        <input type="checkbox" value="_destroy" id="attributes_6_destroy">
+        <input type="checkbox" value="_destroy" class="destroy" id="attributes_6_destroy">
         <label for="attributes_6_destroy">Remove</label>
     </div>
 </div>
